# drone-tm

./: .dockerignore  .env  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Justfile  README.md  cla.json  compose.dev.yaml  compose.login-hanko.yaml  compose.odm.yaml  compose.sub.yaml  compose.test.yaml  compose.vm.yaml  compose.yaml  docker-compose.odm.yml  docker-compose.vm.yml  docker-compose.yml  env_sample.txt  index.html  mkdocs.yml  nginx.conf  objects.inv  package.json  pnpm-lock.yaml  sitemap.xml  sql
src/backend/: .dockerignore  Dockerfile  Dockerfile.dockerignore  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
src/backend/app/: __version__.py  config.py  main.py  monitoring.py  public_routes.py  s3.py  utils.py
src/backend/app/alembic/: env.py
src/backend/app/arq/: cloudnative.py  health_check.py  tasks.py
src/backend/app/db/: database.py  db_models.py
src/backend/app/drones/: drone_crud.py  drone_deps.py  drone_logic.py  drone_routes.py  drone_schemas.py
src/backend/app/email_templates/: mapping_approved_or_rejected.html  mapping_requests.html
src/backend/app/email_templates/mapping/: approved_or_rejected.html  requests.html  task_marked_unflyable.html
src/backend/app/email_templates/password/: password_reset.html
src/backend/app/email_templates/regulator/: approval_request.html
src/backend/app/gcp/: gcp_crud.py  gcp_routes.py
src/backend/app/images/: flight_gap_identification.py  flight_stationary_removal.py  flight_tail_removal.py  image_classification.py  image_footprints.py  image_logic.py  image_processing.py  image_schemas.py  solar_position.py
src/backend/app/jaxa/: jaxa_coordinates.py  tif_spider.py  upload_dem.py
src/backend/app/migrations/: env.py
src/backend/app/migrations/versions/: 001_add_project_images_table.py  06668eb5d14a_.py  0c7b5d8e9f12_project_output_metadata.py  162edb7e3cc4_add_regulators_approval_and_comment.py  1ebfe5e4cf1c_add_overlap_in_projects_table.py  22144a18e51d_.py  2453ee32bc4f_.py  260a74dea5ca_.py  2803924c6ff9_.py  2b92f8a9bbec_.py  3265acd2362a_add_odm_endpoint_used_column_to_tasks_.py  3293e9c98b2a_.py  33ba9f9d89d8_image_processing_status.py  3b1d2f6a7c4e_add_new_enum_to_state.py  3cd04bfdb1e4_add_user_role_regulator.py  488158d3d5a8_.py  4b1534031978_add_gcp_table.py  4ea77c60b715_.py  5235ef4afa9c_.py  5d2f48a96a8e_.py  5d38e368b3d2_.py  62a16e505bc3_.py  7389d0d528c3_oam_upload_status.py  7b6426a1bd67_oam_api_token.py  7f3a8b9c2d1e_rename_finaloutput_enum.py  832089d4a1de_deadline_for_projects.py  87b6f9d734e8_.py  88ae62ec8876_.py  8ae4e43a7011_.py  973d20c518d6_add_hanko_user_mappings_table.py  9d01411fd221_.py  a003df57e169_fix_latest_schema_2026_1_0.py  ac09917990dc_.py  (+31 more)
src/backend/app/models/: enums.py
src/backend/app/projects/: classification_routes.py  flight_preview.py  image_classification.py  image_processing.py  oam.py  project_crud.py  project_deps.py  project_logic.py  project_routes.py  project_schemas.py  s3_paths.py
src/backend/app/scripts/: generate_cloudnative.py
src/backend/app/tasks/: oam.py  splitter.py  task_crud.py  task_logic.py  task_routes.py  task_schemas.py  task_splitter.py
src/backend/app/templates/: dronetm-guide.html
src/backend/app/tests/: conftest.py  test_drones.py  test_drones_routes.py
src/backend/app/users/: auth.py  hanko_helpers.py  oauth_routes.py  permissions.py  user_crud.py  user_deps.py  user_logic.py  user_routes.py  user_schemas.py
src/backend/app/waypoints/: flightplan_output.py  waypoint_crud.py  waypoint_logic.py  waypoint_routes.py  waypoint_schemas.py
src/backend/libs/: hotosm_auth-0.1.0-py3-none-any.whl  hotosm_auth-0.1.1-py3-none-any.whl  hotosm_auth-0.1.10-py3-none-any.whl  hotosm_auth-0.1.11-py3-none-any.whl  hotosm_auth-0.1.12-py3-none-any.whl  hotosm_auth-0.1.5-py3-none-any.whl  hotosm_auth-0.1.6-py3-none-any.whl  hotosm_auth-0.1.7-py3-none-any.whl  hotosm_auth-0.1.8-py3-none-any.whl  hotosm_auth-0.1.9-py3-none-any.whl  hotosm_auth-0.2.0-py3-none-any.whl  hotosm_auth-0.2.2-py3-none-any.whl  hotosm_auth-0.2.3-py3-none-any.whl  hotosm_auth-0.2.4-py3-none-any.whl
src/backend/scripts/: README.md  mark_project_complete.py  migrate_images_from_s3.py  migrate_legacy_odm_assets.py
src/backend/scripts/2026/: mark-project-complete.py  migrate-task-assets-url.py
src/backend/tests/: conftest.py  test_batch_delete.py  test_batch_map_data.py  test_classification_routes.py  test_cloudnative.py  test_drones_routes.py  test_exif_gps_validation.py  test_flight_gap_detection.py  test_flight_plan.py  test_flight_preview.py  test_flight_tail_detection.py  test_gcp_footprint.py  test_gcp_routes.py  test_hanko_auth.py  test_image_footprints.py  test_image_quality_classification.py  test_logging_config.py  test_migrations.py  test_project_processing.py  test_projects_routes.py  test_solar_position.py  test_stationary_detection.py  test_task_splitter.py  test_tasks_routes.py  test_user_deps.py  test_users_routes.py  test_waypoint_routes.py
src/backend/tests/freetown_dataset/: aoi.geojson  image_metadata.csv  images-to-delete-for-gaps.txt
(+670 files in other folders)
