[project]
name = "drone-tm"
version = "0.1.0"
description = "Community-driven drone imagery generation"
authors = [
    {name = "HOTOSM", email = "sysadmin@hotosm.org"},
]
dependencies = [
    "fastapi==0.112.0",
    "geojson==3.1.0",
    "uvicorn==0.30.5",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.8.2",
    "pydantic-settings==2.4.0",
    "geojson-pydantic==1.1.0",
    "shapely==2.0.5",
    "sqlalchemy==2.0.23",
    "geoalchemy2==0.14.2",
    "psycopg[pool]>=3.2.1",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "loguru>=0.7.2",
    "fmtm-splitter==1.2.2",
    "minio>=7.2.7",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]==1.7.4",
    "alembic>=1.13.1",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.4",
    "numpy==1.26.4",
    "GDAL==3.6.2",
    "aiosmtplib>=3.0.1",
    "python-slugify>=8.0.4",
    "drone-flightplan==0.3.1rc2",
]
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=23.11.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.30",
    "mkdocstrings-python>=1.10.5",
    "mkdocs-exclude>=1.0.2",
    "python-dotenv>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mdx-truly-sane-lists>=1.3",
]
test = [
    "pytest>=8.3.2",
    "httpx>=0.27.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
